tests/ui/block-result/issue-11714.rs
fn blah() -> i32 { //~ ERROR mismatched types
    1

    ;
}

fn main() { }

// ferrocene-annotations: fls_1pg5ig740tg1
// Expression Statements
//
// ferrocene-annotations: fls_hndm19t57wby
// Block Expressions
